# nr-gate

./: .gitattributes  .gitignore  CLAUDE.md  README.md  hsk5_hsk6_feasibility_bangla_l1.md  hsk5_speaking_telecom_plan_v2.md  pyproject.toml  tracker.md
decks/: hsk_anki.txt  hsk_pleco.xml
graphify-out/: .phase2_research_raw.json  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
hooks/: commit-msg  gate-ci.sh  install.sh
phase1/: README.md  artifacts.md  day-00.md  day-01.md  day-02.md  day-03.md  day-04.md  day-05.md  day-06.md  day-07.md  day-08.md  day-09.md  day-10.md  day-11.md  day-12.md  day-13.md  day-14.md  day-15.md  day-16.md  day-17.md  day-18.md  day-19.md  day-20.md  day-21.md  day-22.md  day-23.md  day-24.md  day-25.md  day-26.md  day-27.md  day-28.md  day-29.md  day-30.md  day-31.md  day-32.md  day-33.md  day-34.md  day-35.md  day-36.md  day-37.md  (+13 more)
phase2/: README.md  day-00.md  day-01.md  day-02.md  day-03.md  day-04.md  day-05.md  day-06.md  day-07.md  day-08.md  day-09.md  day-10.md  day-11.md  day-12.md  day-13.md  day-14.md  day-15.md  day-16.md  day-17.md  day-18.md  day-19.md  day-20.md  day-21.md  day-22.md  day-23.md  day-24.md  day-25.md  day-26.md  day-27.md  day-28.md  day-29.md  day-30.md  day-31.md  day-32.md  day-33.md  day-34.md  day-35.md  day-36.md  day-37.md  day-38.md  (+23 more)
recordings/: README.md
scripts/: build_decks.py  build_out.txt  build_out2.txt  build_out3.txt  debug2.py  debug2_out.txt  debug_out.txt  debug_parse.py  hvpt.py  hvpt_config.json  hvpt_engine.py  make_alt_corpus.py  make_test_corpus.py  (+3 more)
(+11 files in other folders)
