[project]
name = "hsk3-5"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "praat-parselmouth>=0.4.7",
    "pygame>=2.6.1",
    "pymupdf>=1.28.0",
    "sounddevice>=0.5.5",
    "soundfile>=0.14.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
addopts = "--basetemp=.pytest_tmp"
